--- a/src/modules/make-good-video/make-good-video.pug
+++ b/src/modules/make-good-video/make-good-video.pug
@@ -1,10 +1,10 @@
 include ../../modules/box-header/box-header
 include ../../modules/box-button/box-button
 
-mixin make-good-video()
+mixin make-good-video(title, description)
     .make-good-video
         +box-header(
-            'Сделаем красивое видео вместе',
-            'Заполните небольшую заявку, и мы проведем консультацию, напишем три концепции сценария и посчитаем стоимость вашего видеоролика'
+            title,
+            description
         )
         +box-button('Заполнить заявку', 'light')
