all pages is complete

--- a/src/modules/behind-scenes-card/behind-scenes-card.pug
+++ b/src/modules/behind-scenes-card/behind-scenes-card.pug
@@ -1,4 +1,4 @@
-mixin behind-scenes-card()
-    .behind-scenes-card
+mixin behind-scenes-card(image)
+    .behind-scenes-card.swiper-slide
         .behind-scenes-card__preview-container
-            img(src="../../assets/hleb.jpg").behind-scenes-card__preview
+            img(src=image).behind-scenes-card__preview
