--- a/src/modules/behind-scenes/behind-scenes.scss
+++ b/src/modules/behind-scenes/behind-scenes.scss
@@ -4,5 +4,10 @@
   &__inner {
     display: flex;
     flex-wrap: wrap;
+    @media screen and (max-width: 768px) {
+      display: block;
+      flex: none;
+      flex-wrap: nowrap;
+    }
   }
 }
