--- a/src/modules/blog-list-card/blog-list-card.pug
+++ b/src/modules/blog-list-card/blog-list-card.pug
@@ -1,6 +1,7 @@
 mixin blog-list-card(preview, title, description)
-    .blog-list-card
-        img(src=preview).blog-list-card__preview
-        .blog-list-card__info
-            .blog-list-card__info-title= title
-            .blog-list-card__info-description= description
+    .blog-list-card(data-aos!=attributes.aos data-aos-delay!=attributes.delay).swiper-slide
+        a(href="#")
+            img(src=preview).blog-list-card__preview
+            .blog-list-card__info
+                .blog-list-card__info-title= title
+                .blog-list-card__info-description= description
