--- a/src/modules/calculating-form/calculating-form.pug
+++ b/src/modules/calculating-form/calculating-form.pug
@@ -8,16 +8,17 @@ mixin calculating-form()
             true
         )
         form.calculating-form
-            .calculating-form__inner
-                .calculating-form__column
-                    input(type="email" placeholder="Ваш e-mail").calculating-form__input
-                .calculating-form__column
-                    input(type="text" placeholder="Имя").calculating-form__input
-                .calculating-form__column
-                    input(type="tel" pattern="[0-9]*" placeholder="Телефон").calculating-form__input
-                .calculating-form__column
-                    input(type="submit").calculating-form__submit
-            .calculating-form-errors
-                .calculating-form-errors__text Пожалуйста, заполните все обязательные поля
-            .calculating-form__politics
-                | Нажимая «Отправить», вы даете согласие на обработку персональных данных и соглашаетесь c <a href="#">политикой конфиденциальности</a>
+            div(data-aos="zoom-in" data-aos-delay="400")
+                .calculating-form__inner
+                    .calculating-form__column
+                        input(type="email" placeholder="Ваш e-mail").calculating-form__input
+                    .calculating-form__column
+                        input(type="text" placeholder="Имя").calculating-form__input
+                    .calculating-form__column
+                        input(type="tel" pattern="[0-9]*" placeholder="Телефон").calculating-form__input
+                    .calculating-form__column
+                        input(type="submit").calculating-form__submit
+                .calculating-form-errors
+                    .calculating-form-errors__text Пожалуйста, заполните все обязательные поля
+                .calculating-form__politics
+                    | Нажимая «Отправить», вы даете согласие на обработку персональных данных и соглашаетесь c <a href="#">политикой конфиденциальности</a>
