--- a/src/modules/make-good-video/make-good-video.pug
+++ b/src/modules/make-good-video/make-good-video.pug
@@ -7,4 +7,4 @@ mixin make-good-video(title, description)
             title,
             description
         )
-        +box-button('Заполнить заявку', 'light')
+        +box-button('Заполнить заявку', 'light', true)(aos="fade-zoom-in" delay="700")
