--- a/src/modules/project-card/project-card.pug
+++ b/src/modules/project-card/project-card.pug
@@ -1,5 +1,5 @@
 mixin project-card()
-    a(href="#").project-card
+    a(href="#").project-card.swiper-slide
         .project-card__image-container
             img(src="../../assets/hleb.jpg").project-card__image
         .project-card__gradient
