--- a/src/modules/services-list/services-list.pug
+++ b/src/modules/services-list/services-list.pug
@@ -12,38 +12,39 @@ mixin services-list()
               './../../assets/film-logo.svg',
               'Разработка креативов и сценария',
               'Мы разрабатываем концепции, пишем сценарий и делаем раскадровку — это начальная документация для производства качественного видео'
-            )
+            )(aos="fade-up" delay="100")
             +service-card(
               './../../assets/film-logo.svg',
               'Презентационные видеоролики',
               'Поможет рассказать о компании и производимой продукции, преимуществах над конкурентами.'
-            )
+            )(aos="fade-up" delay="200")
             +service-card(
               './../../assets/film-logo.svg',
               'Имиджевые видеоролики',
-              'Сформируют имидж и позиционирование компании в атмосферном видео вызывающим нужные эмоциями.')
+              'Сформируют имидж и позиционирование компании в атмосферном видео вызывающим нужные эмоциями.'
+            )(aos="fade-up" delay="300")
             +service-card(
               './../../assets/film-logo.svg',
               'Рекламные видеоролики',
               'Кратко и емко познакомят зрителя с продуктом, акцией или услугой. Для продвиженя в социальных сетях, YouTube и размещения на ТВ'
-            )
+            )(aos="fade-up" delay="400")
             +service-card(
               './../../assets/film-logo.svg',
               'Анимационные видеоролики',
               'Расскажут о продукте компании, услуге или сервисе. Выгодно презентуют IT решения в понятном и красивом стиле'
-            )
+            )(aos="fade-up" delay="500")
             +service-card(
               './../../assets/film-logo.svg',
               'HR видео и Учебные фильмы',
               'Сформирует положительный образ компании для потенциальных работников. Поможет рассказать о корпоративной культуре, ценностях и росте. Обучить сотрудников необходимым техникам.'
-            )
+            )(aos="fade-up" delay="600")
             +service-card(
               './../../assets/film-logo.svg',
               'Видеоконтент для YouTube и социальных сетей',
               'Полезный и развлекательный видеоконтент, который поможет вашему YouTube каналу стать популярным среди вашей аудитории.'
-            )
+            )(aos="fade-up" delay="700")
             +service-card(
               './../../assets/film-logo.svg',
               'Продвижение видеоконтента',
               'SEO описание, Органический посев и таргетированная реклама: YouTube, VK, Instagram, Facebook, Одноклассники.'
-            )
+            )(aos="fade-up" delay="800")
