--- a/src/modules/working-card/working-card.pug
+++ b/src/modules/working-card/working-card.pug
@@ -1,5 +1,5 @@
 mixin working-card(number, title, description)
-    .working-card
+    .working-card(data-aos!=attributes.aos data-aos-delay!=attributes.delay)
         .working-card__number= number
         .working-card__title= title
         .working-card__description!= description
