--- a/src/modules/working-list/working-list.pug
+++ b/src/modules/working-list/working-list.pug
@@ -15,20 +15,20 @@ mixin working-list(title, description, thePrinciples)
                     'В первую очередь видео это инструмент решения проблем. ' +
                     'Низкие продажи, лояльность, узнаваемость доверие к продукции и компании. ' +
                     'Мы не создаем просто красивые видеоролики. Мы системно подходим к процессу производства видео и стараемся создавать контент который будет решать задачи клиента.'
-                )
+                )(aos="fade-up" delay="100")
                 +working-card(
                     2,
                     'История и эмоции',
                     'Креативный сценарий это сильный инструмент в борьбе за внимание зрителя. ' +
                     'История способна вывести на нужные эмоции, рассказать о компании, товаре или услуге. ' +
                     'От традиционных решений до безбашенных и смелых идей. Все зависит от вас, на что вы готовы.'
-                )
+                )(aos="fade-up" delay="200")
                 +working-card(
                     3,
                     'Аудитория',
                     'Ваше видео должно найти свою аудиторию. Для этого мы используем инструменты таргетированной рекламы ' +
                     'и органического посева видео, только на тех площадках, которые посещают ваши клиенты '
-                )
+                )(aos="fade-up" delay="300")
             else
                 +working-card(
                     1,
@@ -37,7 +37,7 @@ mixin working-list(title, description, thePrinciples)
                     '- Создание раскадровки или аниматика<br>' +
                     '- Поиск актеров, локаций, реквизита.<br>' +
                     '- Проводим Тестовые съемки'
-                )
+                )(aos="fade-up" delay="100")
                 +working-card(
                     2,
                     'Продакшн',
@@ -46,11 +46,11 @@ mixin working-list(title, description, thePrinciples)
                     '- Гример и стилист готовят актеров.<br>' +
                     '- Ставим свет, Режессируем, Снимаем.<br>' +
                     '- Собираемся'
-                )
+                )(aos="fade-up" delay="200")
                 +working-card(
                     3,
                     'Пост-продакшн',
                     '- Монтируем<br>' +
                     '- Делаем цветокоррекцию и графику<br>' +
                     '- Создаем музыку и саунддизайн<br>'
-                )
+                )(aos="fade-up" delay="300")
