--- a/src/pages/blogListPage/index.pug
+++ b/src/pages/blogListPage/index.pug
@@ -14,8 +14,8 @@ block page
                     img(src="./../../assets/logo.png")
                 +main-menu()
         .art-board__wrapper
-            h1.art-board__title Блог
-            .art-board-bottom
+            h1(data-aos="zoom-in" data-aos-delay="400").art-board__title Блог
+            .art-board-bottom(data-aos="fade-up" data-aos-delay="600")
                 .art-board__info
                     | Полезные статьи о тонкостях видеопроизводства
         a(href="#").art-board__arrow
