--- a/src/modules/blog-list/blog-list.pug
+++ b/src/modules/blog-list/blog-list.pug
@@ -7,9 +7,28 @@ mixin blog-list()
             'Блог',
             'Почитайте наш блог и вы сможете найти много полезной и практической информации'
         )
-        .blog-list__inner
-            +blog-list-card('./../../assets/blog_preview.jpg', 'Сколько стоит рекламный ролик?', '«Сколько стоит видеоролик?» — это один из первых вопросов, который задаёт клиент, обращаясь в видеопродакшн.')
-            +blog-list-card('./../../assets/blog_preview.jpg', 'Сколько стоит рекламный ролик?', '«Сколько стоит видеоролик?» — это один из первых вопросов, который задаёт клиент, обращаясь в видеопродакшн.')
-            +blog-list-card('./../../assets/blog_preview.jpg', 'Сколько стоит рекламный ролик?', '«Сколько стоит видеоролик?» — это один из первых вопросов, который задаёт клиент, обращаясь в видеопродакшн.')
-            +blog-list-card('./../../assets/blog_preview.jpg', 'Сколько стоит рекламный ролик?', '«Сколько стоит видеоролик?» — это один из первых вопросов, который задаёт клиент, обращаясь в видеопродакшн.')
+        .swiper-container.swiper-container--blog-list.m--default-swipper
+            .blog-list__inner.swiper-wrapper
+                +blog-list-card(
+                  './../../assets/blog_preview.jpg',
+                  'Сколько стоит рекламный ролик?',
+                  '«Сколько стоит видеоролик?» — это один из первых вопросов, который задаёт клиент, обращаясь в видеопродакшн.'
+                )(aos="fade-up" delay="100")
+                +blog-list-card(
+                    './../../assets/blog_preview.jpg',
+                    'Сколько стоит рекламный ролик?',
+                    '«Сколько стоит видеоролик?» — это один из первых вопросов, который задаёт клиент, обращаясь в видеопродакшн.'
+                )(aos="fade-up" delay="200")
+                +blog-list-card(
+                    './../../assets/blog_preview.jpg',
+                    'Сколько стоит рекламный ролик?',
+                    '«Сколько стоит видеоролик?» — это один из первых вопросов, который задаёт клиент, обращаясь в видеопродакшн.'
+                )(aos="fade-up" delay="300")
+                +blog-list-card(
+                    './../../assets/blog_preview.jpg',
+                    'Сколько стоит рекламный ролик?',
+                    '«Сколько стоит видеоролик?» — это один из первых вопросов, который задаёт клиент, обращаясь в видеопродакшн.'
+                )(aos="fade-up" delay="400")
+            div.swiper-button-next
+            div.swiper-button-prev
         +box-button('Посмотреть все статьи')
