--- a/src/modules/box-button/box-button.scss
+++ b/src/modules/box-button/box-button.scss
@@ -4,6 +4,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  &__arrow {
+    width: 45px;
+    margin-left: -75px;
+    margin-right: 30px;
+    @media screen and (max-width: 480px){
+      display: none;
+    }
+  }
   &--dark {
     padding-top: 75px;
     padding-bottom: 75px;
@@ -26,27 +34,32 @@
   }
   &--light & {
     &__button {
-      color: #1154d9;
+      color: #00aeef;
       border: 2px solid #ffffff;
       background-color: #ffffff;
       &:hover {
-        background-color: #1154d9;
+        background-color: #00aeef;
         color: #ffffff;
         border-color: #ffffff;
       }
     }
   }
   &__button {
+    display: block;
     @include button-style;
     font-size: 16px;
     color: #707070;
     border: 2px solid #707070;
     border-radius: 15px;
     font-weight: 500;
+    @media screen and (max-width: 768px){
+      max-width: 300px;
+      padding: 0 35px;
+    }
     &:hover {
-      background-color: #1154d9;
+      background-color: #00aeef;
       color: #ffffff;
-      border-color: #1154d9;
+      border-color: #00aeef;
     }
   }
 }
