--- a/src/modules/box-header/box-header.scss
+++ b/src/modules/box-header/box-header.scss
@@ -5,6 +5,10 @@
   padding-top: 150px;
   padding-bottom: 75px;
   text-align: center;
+  @media screen and (max-width: 768px){
+    padding-top: 85px;
+    padding-bottom: 55px;
+  }
   & h2 {
     color: #202020;
     margin: 0;
@@ -13,6 +17,9 @@
     font-weight: 500;
     padding-top: 8px;
     padding-bottom: 3px;
+    @media screen and (max-width: 768px){
+      font-size: 30px;
+    }
   }
   & p {
     color: #707070;
@@ -21,6 +28,10 @@
     padding: 41px 0 0 0;
     line-height: 1.5;
     font-weight: 400;
+    @media screen and (max-width: 768px){
+      font-size: 18px;
+      padding: 21px 0 0 0;
+    }
     & a {
       color: rgb(17, 84, 217) !important;
       text-decoration: none;
