--- a/src/modules/project-card/project-card.scss
+++ b/src/modules/project-card/project-card.scss
@@ -1,5 +1,5 @@
 .project-card {
-  width: 25%;
+  min-width: 25%;
   height: 25vw;
   position: relative;
   overflow: hidden;
@@ -7,6 +7,59 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  flex-shrink: 0;
+  @media screen and (max-width: 1200px) {
+    width: 33.3333%;
+    height: 33.3333vw;
+  }
+  @media screen and (max-width: 768px) {
+    flex-shrink: 0;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transition-property: transform;
+  }
+  @media screen and (min-width: 680px) and (max-width: 768px) {
+    &.swiper-slide {
+      &-active,
+      &-next {
+        & .project-card {
+          &__image {
+            transform: scale(1.05);
+          }
+          &__gradient {
+            content: '';
+            opacity: 1;
+          }
+          &__extra {
+            -webkit-transform: translateY(0);
+            transform: translateY(0);
+            opacity: 1;
+          }
+        }
+      }
+    }
+  }
+  @media screen and (max-width: 679px) {
+    &.swiper-slide {
+      &-active {
+        & .project-card {
+          &__image {
+            transform: scale(1.05);
+          }
+          &__gradient {
+            content: '';
+            opacity: 1;
+          }
+          &__extra {
+            -webkit-transform: translateY(0);
+            transform: translateY(0);
+            opacity: 1;
+          }
+        }
+      }
+    }
+  }
   &:hover & {
     &__image {
       transform: scale(1.05);
@@ -53,10 +106,10 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background-image: -moz-linear-gradient(top, rgba(17,84,217,0.0), rgba(17,84,217,1));
-    background-image: -webkit-linear-gradient(top, rgba(17,84,217,0.0), rgba(17,84,217,1));
-    background-image: -o-linear-gradient(top, rgba(17,84,217,0.0), rgba(17,84,217,1));
-    background-image: -ms-linear-gradient(top, rgba(17,84,217,0.0), rgba(17,84,217,1));
+    background-image: -moz-linear-gradient(top, rgba(17,84,217,0.0), #00aeef);
+    background-image: -webkit-linear-gradient(top, rgba(17,84,217,0.0), #00aeef);
+    background-image: -o-linear-gradient(top, rgba(17,84,217,0.0), #00aeef);
+    background-image: -ms-linear-gradient(top, rgba(17,84,217,0.0), #00aeef);
   }
   &__extra {
     text-align: center;
