--- a/src/modules/service-card/service-card.scss
+++ b/src/modules/service-card/service-card.scss
@@ -4,10 +4,24 @@
   display: flex;
   align-items: flex-start;
   margin-bottom: 90px;
+  @media screen and (max-width: 900px) {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto 90px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  @media screen and (max-width: 768px) {
+    padding: 0;
+  }
   &__icon {
     width: 70px;
     min-width: 70px;
     margin-right: 20px;
+    @media screen and (max-width: 768px) {
+      width: 50px;
+    }
   }
   &__title {
     color: #202020;
