--- a/src/modules/working-card/working-card.scss
+++ b/src/modules/working-card/working-card.scss
@@ -2,6 +2,13 @@
   min-width: 300px;
   max-width: 300px;
   padding: 0 20px;
+  @media screen and (max-width: 900px) {
+    max-width: 600px;
+    margin-bottom: 25px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
   &__number {
     display: flex;
     align-items: center;
@@ -9,7 +16,7 @@
     width: 80px;
     height: 80px;
     margin: 0 auto 20px;
-    background: #1154d9;
+    background: #00aeef;
     font-size: 26px;
     line-height: 1.23;
     color: #ffffff;
