--- a/src/modules/working-list/working-list.scss
+++ b/src/modules/working-list/working-list.scss
@@ -2,9 +2,16 @@
 
 .working-list {
   padding-bottom: 150px;
+  @media screen and (max-width: 768px){
+    padding-bottom: 90px;
+  }
   &__inner {
     @include container-styles;
     display: flex;
     justify-content: center;
+    @media screen and (max-width: 900px) {
+      flex-direction: column;
+      align-items: center;
+    }
   }
 }
