--- a/src/pages/blogListPage/blogListPage.scss
+++ b/src/pages/blogListPage/blogListPage.scss
@@ -2,17 +2,15 @@
 
 
 .blog-list {
-
-  &__inner {
-    @include container-styles;
-    max-width: 1160px;
-    flex-direction: column;
-  }
   &--main-list {
-    background-color: #1154D9;
+    background-color: #00aeef;
   }
   &--main-list & {
     &__inner {
+      @include container-styles;
+      padding: 0;
+      max-width: 1160px;
+      flex-direction: column;
       background: #ffffff;
     }
   }
