--- a/src/pages/blogPage/index.pug
+++ b/src/pages/blogPage/index.pug
@@ -11,8 +11,8 @@ block page
                         img(src="./../../assets/logo.png")
                     +main-menu
             .art-board__wrapper
-                h1.art-board__title Нововведения 2020
-                .art-board-bottom
+                h1(data-aos="fade-up" data-aos-delay="600").art-board__title Нововведения 2020
+                .art-board-bottom(data-aos="fade-up" data-aos-delay="800")
                     .art-board__info
                         | Мы производим презентационные, имиджевые и анимационные видеоролики, для бизнеса.
             a(href="#").art-board__arrow
