--- a/src/pages/projectPage/projectPage.scss
+++ b/src/pages/projectPage/projectPage.scss
@@ -1,8 +1,16 @@
 .video-board {
+  max-width: 1200px;
+  margin: 0 auto;
   position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
+  display: block;
+  width: 100%;
+  padding: 0;
   overflow: hidden;
+  &:before {
+    display: block;
+    content: "";
+    padding-top: 56.25%;
+  }
   & iframe {
     position: absolute;
     top: 0;
