--- a/src/scss/inner-page.scss
+++ b/src/scss/inner-page.scss
@@ -4,37 +4,36 @@
   &-navigation {
     display: flex;
     padding-top: 180px;
+    @media screen and (max-width: 700px) {
+      padding-top: 120px;
+      flex-direction: column;
+    }
     &__link {
       width: 50%;
       padding: 40px;
-      color: #202020;
       font-size: 22px;
       line-height: 1.35;
       font-weight: 500;
       text-decoration: none;
+      background: #2f2f2f;
+      color: #ffffff;
+      transition: opacity ease-in-out 0.3s;
+      flex: auto;
+      @media screen and (max-width: 700px) {
+        width: 100%;
+      }
       & span {
+        color: #ffffff;
         display: block;
-        color: #707070;
         text-transform: uppercase;
         margin-bottom: 12px;
         font-size: 12px;
         letter-spacing: 2.5px;
       }
     }
-    &__back {
-
-    }
     &__next {
-      color: #ffffff;
-      background: #202020;
+      background: #464646;
       text-align: right;
-      transition: opacity ease-in-out 0.3s;
-      &:hover {
-        opacity: .9;
-      }
-      & span {
-        color: #ffffff;
-      }
     }
   }
   &__topic {
@@ -63,6 +62,9 @@
     font-size: 20px;
     line-height: 1.55;
     position: relative;
+    @media screen and (max-width: 768px) {
+      padding: 0 15px;
+    }
     &:before {
       display: block;
       content: "";
@@ -79,6 +81,12 @@
     max-width: 1200px;
     margin: 0 auto;
     padding-top: 150px;
+    @media screen and (max-width: 1230px) {
+      padding: 0 15px;
+    }
+    @media screen and (max-width: 768px) {
+      padding: 90px 15px 0;
+    }
     & h2 {
       font-size: 32px;
       text-align: left;
@@ -104,13 +112,20 @@
       text-align: left;
       max-width: 760px;
       margin: 0 auto 45px;
+      @media screen and (max-width: 768px) {
+        font-size: 16px;
+        line-height: 1.45;
+      }
     }
     & blockquote {
       max-width: 880px;
       margin: 0 auto 45px;
       padding: 60px;
-      background: #1154d9;
+      background: #00aeef;
       box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.1);
+      @media screen and (max-width: 768px) {
+        padding: 30px;
+      }
       & p {
         max-width: initial;
         text-align: center;
@@ -119,6 +134,10 @@
         font-size: 28px;
         line-height: 50px;
         font-weight: 500;
+        @media screen and (max-width: 768px) {
+          font-size: 24px;
+          line-height: 38px;
+        }
       }
     }
   }
